# Anura

./: .TESTING.md  .editorconfig  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG_REMEDIATION.md  CLAUDE.md  CONTRIBUTING.md  COPYING  DESIGN.md  LICENSE  README.md  REPORT_INVESTIGATIVO_ANURA.md  SECURITY.md  STATIC_ANALYSIS_REPORT.md  anura.doap  bandit_report.txt  bug_report_final.json  bug_validation_report.md  bugs-observed.json  bugs-summary.md  check_i18n.py  final_test_output.txt  generate_pot.sh  i18n_diagnosis_report.md  imlib2_1.12.6.orig.tar.xz  meson.build  mypy_report.txt  pyproject.toml  pytest_fail.txt  pytest_output.txt  release.sh  review_audit.md  ruff_report.txt  setup-gschema.sh  update_audit.py  update_summary.py  vulture_report.txt  zxing_cpp-2.3.0-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl
.clinerules/workflows/: code_quality.md  commit_rule.md
.devin/rules/: architecture.md  vibe-clean.md  workflow.md
.devin/workflows/: bug_analysis.md  fix_check.md  review.md
.github/workflows/: flatpack.yml  flatpak-dependencies.yml  main.yml
.jules/: bolt.md
.windsurf/: PRIORITY_READ_FIRST.md  settings.json
.windsurf/rules/: Python Security Assistant Tool.md  anura-stack.md  coding-structure.md  dead-code.md  debugging.md  package-management.md  testing.md  workflow.md
.windsurf/workflows/: review.md
anura/: __init__.py  atomic_task_manager.py  config.py  gobject_worker.py  language_manager.py  main.py  settings.py  window.py
anura/controllers/: dnd_controller.py  ocr_controller.py  tts_controller.py
anura/core/: action_registry.py  atomic_task_manager.py  boot.py  dialogs.py  i18n.py  logger.py  resources.py  silent_runner.py
anura/models/: context.py  ocr.py
anura/services/: clipboard_service.py  host_screenshot_fallback.py  language_manager.py  notification_service.py  result_dispatcher.py  screenshot_service.py  settings.py  share_service.py  telemetry.py  tts.py
anura/transformers/: base_transformers.py  email_transformer.py  magic_processor.py  models.py  url_transformer.py
anura/types/: __init__.py  context.py  download_state.py  language_item.py  ocr.py
anura/utils/: __init__.py  barcode_detector.py  cleanup.py  image_filters.py  portal_advice.py  share_utils.py  signal_manager.py  singleton.py  structural_reconstructor.py  text_preprocessor.py  validators.py
anura/widgets/: extracted_page.py  language_popover.py  language_popover_row.py  language_row.py  list_menu_row.py  preferences_dialog.py  preferences_general_page.py  preferences_languages_page.py  share_row.py  shortcuts_overlay.py  welcome_page.py
anura/window_mixins/: dnd_mixin.py  ocr_mixin.py  tts_mixin.py
build-aux/: generate_release_notes.py
build-aux/meson/: postinstall.py
data/: com.github.d3msudo.anura.appdata.xml.in  com.github.d3msudo.anura.desktop.in  com.github.d3msudo.anura.gresource.xml  com.github.d3msudo.anura.gschema.xml  com.github.d3msudo.anura.metainfo.xml.in  io.github.d3msudo.anura.desktop.in  io.github.d3msudo.anura.gresource.xml  io.github.d3msudo.anura.gschema.xml  io.github.d3msudo.anura.metainfo.xml.in  io.github.d3msudo.velis.desktop.in  io.github.d3msudo.velis.gresource.xml  io.github.d3msudo.velis.gschema.xml  io.github.d3msudo.velis.metainfo.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: extracted_page.blp  extracted_page.ui  history_page.ui  language_popover.blp  language_popover.ui  language_popover_row.blp  language_popover_row.ui  language_row.blp  language_row.ui  meson.build  preferences_dialog.blp  preferences_dialog.ui  preferences_general.blp  preferences_general.ui  preferences_languages.blp  preferences_languages.ui  share_row.blp  share_row.ui  shortcuts.blp  shortcuts_overlay.blp  shortcuts_overlay.ui  welcome_page.blp  welcome_page.ui  window.blp  window.ui
docs/: architectural_analysis_umi_ocr.md
docs/audit/: bandit-final.json  bandit_anura.json  mypy-anura.txt  (+21 more)
flatpak/: com.github.d3msudo.anura.json  com.github.tenderowl.frog.json  io.github.d3msudo.anura.json  io.github.d3msudo.anura.local.json  io.github.d3msudo.velis.json  libportal.json  python3-dateutil.json  python3-gTTS.json  python3-modules.json  tesseract.json  zbar-fix-pthread.patch  zbar.json
po/: LINGUAS  POTFILES  anura.pot  ar.po  be_Latn.po  bn.po  bn.po.obsolete  ca.po  ca.po.obsolete  com.github.d3msudo.anura.pot  cs.po  de.po  de.po.obsolete  es.po  es.po.obsolete  eu.po  eu.po.obsolete  fi.po  fr.po  frog.pot  hi.po  ie.po  ie.po.obsolete  io.github.d3msudo.anura.pot  it.po  it.po.obsolete  ja.po  ja.po.obsolete  ko_KR.po  meson.build  nb_NO.po  nb_NO.po.obsolete  nl.po  oc.po  oc.po.obsolete  pt.po  pt.po.obsolete  pt_BR.po  pt_BR.po.obsolete  ru.po  (+7 more)
tests/: conftest.py  setup_resources.sh  test_app_lifecycle.py  test_atomic_task_manager.py  test_atomic_task_manager_unit.py  test_audit_app_logic.py  test_audit_chaos.py  test_audit_config.py  test_audit_config_types.py  test_audit_core_services.py  test_audit_foundational_utils.py  test_audit_integration.py  test_audit_integration_flows.py  test_audit_language_manager.py  test_audit_ocr_preprocessing.py  test_audit_performance.py  test_audit_performance_benchmarks.py  test_audit_reliability_chaos.py  test_audit_screenshot_service.py  test_audit_security.py  test_audit_security_injection.py  test_audit_ui_widgets.py  test_audit_validators.py  test_bug_029_remediation.py  test_bug_035_remediation.py  test_bug_fixes_static.py  test_capability_audit.py  test_cleanup.py  test_clipboard_service.py  test_config.py  test_config_and_types.py  test_extracted_page_reflow.py  test_file_dialog_regressions.py  test_gi_atomic_task_manager_unit.py  test_gi_bugs_audit_v2.py  test_history.py  test_homograph_regression.py  test_host_screenshot_fallback.py  test_integration_cli_enterprise.py  test_integration_flows.py  (+57 more)
velis/: __init__.py  config.py  main.py  meson.build  window.py
velis/services/: __init__.py  history_service.py  meson.build  ocr_service.py  regex_service.py  screenshot_service.py  settings_service.py  translation_service.py  tts_service.py
(+54 files in other folders)
