[project]
name = "anura"
version = "0.1.4.1"
description = "GTK4/Libadwaita desktop app for OCR via Tesseract — fork of Frog OCR"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gtts>=2.5.4",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "pyzbar>=0.1.9",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",       # Linter and formatter
    "meson>=1.5.0",       # Build system (for local testing)
    "pytest>=8.0",        # Test framework
    "pytest-mock>=3.14",  # Mocking for GTK/GLib-dependent code
    "pytesseract>=0.3.13", # OCR engine (for testing)
    "Pillow>=12.2.0",      # Image processing (for testing)
    "pyzbar>=0.1.9",      # QR code decoding (for testing)
    "gtts>=2.5.4",         # Text-to-speech (for testing)
    "loguru>=0.7.3",        # Logging (for testing)
    "requests>=2.33.1",      # HTTP requests (for testing)
]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["anura", "build-aux"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # use contextlib.suppress (style preference)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["anura"]
# gi.repository is a special namespace — treat as third-party
known-third-party = ["gi", "loguru", "pytesseract", "gtts", "pyzbar", "PIL", "requests"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (re-exports)
"anura/**/__init__.py" = ["F401"]
# Allow broad exceptions in worker error handlers
"anura/gobject_worker.py" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Markers for GTK-dependent tests that require a display
markers = [
    "gtk: tests that require a running GTK/GLib environment",
    "network: tests that require network access",
]
# Skip GTK tests in CI unless DISPLAY or WAYLAND_DISPLAY is set
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
