[project]
name = "anura"
version = "0.1.4.3"
description = "GTK4/Libadwaita desktop app for OCR via Tesseract — fork of Frog OCR"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gtts>=2.5.4",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "pyzbar>=0.1.9",
    "requests>=2.34.2",
]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["anura", "build-aux"]
exclude = ["data/", "po/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # use contextlib.suppress (style preference)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["anura"]
# gi.repository is a special namespace — treat as third-party
known-third-party = ["gi", "loguru", "pytesseract", "gtts", "pyzbar", "PIL", "requests"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (re-exports)
"anura/**/__init__.py" = ["F401"]
# Allow broad exceptions in worker error handlers
"anura/gobject_worker.py" = ["B"]
# Allow module level imports not at top of file (intentional for logging setup)
"anura/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Markers for GTK-dependent tests that require a display
markers = [
    "gtk: tests that require a live GTK/Wayland display",
    "network: tests that require network access",
]
# Skip GTK tests in CI unless DISPLAY or WAYLAND_DISPLAY is set
addopts = "-v --tb=short --ignore=tests/test_clipboard_service.py --ignore=tests/test_screenshot_service.py --ignore=tests/test_share_service.py --ignore=tests/test_tts_service.py --ignore=tests/test_notification_service.py --ignore=tests/test_services.py --ignore=tests/test_language_manager.py --ignore=tests/test_tts.py --ignore=tests/test_tts_initialization.py"

[dependency-groups]
dev = [
    "meson>=1.11.1",
    "ninja>=1.13.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.13",
]
