# velis/services/meson.build
services_sources = [
  '__init__.py',
  'history_service.py',
  'ocr_service.py',
  'regex_service.py',
  'screenshot_service.py',
  'translation_service.py',
  'tts_service.py',
  'settings_service.py',
]
install_data(services_sources, install_dir: py_installation.get_install_dir() / velis_dir / 'services')
